[gd_scene load_steps=20 format=3 uid="uid://dybiibrlqhty5"]

[ext_resource type="Script" uid="uid://da85m5tgo2pci" path="res://scripts/menu-inicial/menu_selecao_fase.gd" id="1_30tso"]
[ext_resource type="Texture2D" uid="uid://cx2pr3nroiq1b" path="res://imagens/backgrounds/background-menu-inicial.png" id="1_uxpq5"]
[ext_resource type="FontFile" uid="uid://b7iv04e430tio" path="res://fonts/Silkscreen/Silkscreen-Bold.ttf" id="2_4vtvw"]
[ext_resource type="AudioStream" uid="uid://b21kq6xrhsp47" path="res://sounds/musica-fundo.mp3" id="2_ry13j"]
[ext_resource type="FontFile" uid="uid://clkjjfanemm5b" path="res://fonts/Silkscreen/Silkscreen-Regular.ttf" id="3_86dby"]
[ext_resource type="Theme" uid="uid://4vvlbttduirb" path="res://estilos/tema-botoes.tres" id="6_u6toy"]
[ext_resource type="PackedScene" uid="uid://b83rhs5pm0s7u" path="res://cenas/menu-inicial/help-layer.tscn" id="6_ulre0"]
[ext_resource type="Script" uid="uid://ccupdfvc1sw4g" path="res://cenas/fase2/labelsom.gd" id="7_cergd"]
[ext_resource type="AudioStream" uid="uid://cxp242pp3knj6" path="res://narracao/menu/somando.wav" id="7_eyu1c"]
[ext_resource type="AudioStream" uid="uid://dpptpuwbjmx2n" path="res://narracao/menu/subtraindo.wav" id="8_cergd"]
[ext_resource type="Texture2D" uid="uid://b22k8x1vaao04" path="res://imagens/backgrounds/soma-teste-1.png" id="9_emv4m"]
[ext_resource type="Theme" uid="uid://ctbnfvmw4wfb6" path="res://estilos/botao-sair.tres" id="10_b6xtr"]
[ext_resource type="Texture2D" uid="uid://cw30agoty483i" path="res://imagens/backgrounds/subtracao.png" id="10_eyu1c"]
[ext_resource type="Texture2D" uid="uid://bbbbh8ol03mof" path="res://buttons/botoes-menu/sair.png" id="11_u6toy"]
[ext_resource type="Script" uid="uid://yvlt17h37wvx" path="res://cenas/menu-inicial/botaosom.gd" id="14_ef25g"]
[ext_resource type="AudioStream" uid="uid://bc3nle126udc7" path="res://narracao/menu/sair.wav" id="15_t06b1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4h3qw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ef25g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tcr1x"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
mouse_filter = 2
script = ExtResource("1_30tso")

[node name="BackgroundMenuInicial" type="Sprite2D" parent="."]
modulate = Color(0.39256206, 0.39256206, 0.39256206, 1)
position = Vector2(239, 124)
scale = Vector2(0.317, 0.317)
texture = ExtResource("1_uxpq5")

[node name="MusicaFundo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ry13j")

[node name="SomaTeste1" type="Sprite2D" parent="."]
position = Vector2(136.5, 129.5)
scale = Vector2(10.5625, 10.5625)
texture = ExtResource("9_emv4m")

[node name="SomaTeste2" type="Sprite2D" parent="."]
position = Vector2(342.5, 129.5)
scale = Vector2(10.5625, 10.5625)
texture = ExtResource("10_eyu1c")

[node name="fase1" type="Label" parent="."]
layout_mode = 0
offset_left = 84.0
offset_top = 26.0
offset_right = 186.0
offset_bottom = 47.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_4vtvw")
text = "SOMANDO"
script = ExtResource("7_cergd")

[node name="Area2D" type="Area2D" parent="fase1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="fase1/Area2D"]
position = Vector2(52, 100)
scale = Vector2(8.6, 10)
shape = SubResource("RectangleShape2D_4h3qw")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="fase1"]
stream = ExtResource("7_eyu1c")

[node name="fase2" type="Label" parent="."]
layout_mode = 0
offset_left = 278.0
offset_top = 25.0
offset_right = 412.0
offset_bottom = 46.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("2_4vtvw")
text = "SUBTRAINDO"
script = ExtResource("7_cergd")

[node name="Area2D" type="Area2D" parent="fase2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="fase2/Area2D"]
position = Vector2(65, 100)
scale = Vector2(8.6, 10)
shape = SubResource("RectangleShape2D_ef25g")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="fase2"]
stream = ExtResource("8_cergd")

[node name="iniciarfase1" type="Button" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 214.0
offset_right = 221.0
offset_bottom = 243.0
focus_mode = 0
theme = ExtResource("6_u6toy")
theme_override_fonts/font = ExtResource("3_86dby")
theme_override_font_sizes/font_size = 16
text = "iniciar fase 1"

[node name="iniciarfase2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -223.0
offset_top = -58.0
offset_right = -53.0
offset_bottom = -29.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
theme = ExtResource("6_u6toy")
theme_override_fonts/font = ExtResource("3_86dby")
theme_override_font_sizes/font_size = 16
text = "iniciar fase 2
"

[node name="HelpLayer" parent="." instance=ExtResource("6_ulre0")]

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -89.0
offset_top = -2.0
offset_right = 89.0
offset_bottom = 31.0
grow_horizontal = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 9
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("2_4vtvw")
theme_override_font_sizes/font_size = 25
text = "SELECIONE A FASE"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -237.0
offset_top = -24.0
offset_right = -164.00002
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme = ExtResource("10_b6xtr")
theme_override_fonts/font = ExtResource("2_4vtvw")
theme_override_font_sizes/font_size = 16
text = "SAIR"
script = ExtResource("14_ef25g")

[node name="Area2D" type="Area2D" parent="Button"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button/Area2D"]
position = Vector2(36, 12)
scale = Vector2(3.7, 1.2)
shape = SubResource("RectangleShape2D_tcr1x")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Button"]
stream = ExtResource("15_t06b1")

[node name="Sair" type="Sprite2D" parent="."]
position = Vector2(9, 258)
scale = Vector2(0.43218744, 0.4321874)
texture = ExtResource("11_u6toy")

[connection signal="mouse_entered" from="fase1/Area2D" to="." method="_on_area_mouse_entered"]
[connection signal="mouse_entered" from="fase2/Area2D" to="." method="_on_area_mouse_entered"]
[connection signal="pressed" from="iniciarfase1" to="." method="_on_iniciarfase_1_pressed"]
[connection signal="pressed" from="iniciarfase2" to="." method="_on_iniciarfase_2_pressed"]
[connection signal="pressed" from="Button" to="." method="sair"]
[connection signal="mouse_entered" from="Button/Area2D" to="." method="_on_area_mouse_entered"]
